--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@
     }
        body {
            background-color:rgb(232, 163, 34)
+  
+
+      }
+      .header {
+          background-color: darkorange;
+      }
+        
