modificando index, style.css e .vscode/

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     }
     #descripition {
         font-style: italic ;
+        background-position: 50% 25%;
     
     }
     #naturale {
@@ -28,5 +29,36 @@
       }
       .header {
           background-color: darkorange;
-      }
+          display: inline-flex;
+          
+          
+
+          
+          
         
+           
+      }
+      .name{
+          background-color: darkorange;
+          display: block;
+         font-size: 2em;
+         margin-block-start: 0.67em;
+         margin-block-end: 0.67em;
+         margin-inline-start: 0px;
+         margin-inline-end: 0px;
+         font-weight: bold;
+         
+      }
+    .description{
+        background-color: darkorange;
+        position: absolute;
+    
+    }    
+.habilition{
+    position: relative;
+    height: 50%;
+    
+}
+header, .description    {
+    display: inline-flex
+}
